--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -3,7 +3,28 @@
 }
 
 *::-webkit-scrollbar {
-  display: none;
+  width:12px;
+
+  &-thumb {
+    border-width:1px 1px 1px 2px;
+    border-color: $color-gray-dark;
+    background-color: $color-gray;
+
+    &:hover {
+      border-width: 1px 1px 1px 2px;
+      border-color: $color-gray;
+      background-color: $color-main;
+    }
+  }
+
+  &-track {
+    border-width:0;
+
+    &:hover {
+      border-left: solid 1px $color-gray-dark;
+      background-color: $c3;
+    }
+  }
 }
 
 html {
