--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -20,6 +20,10 @@
     grid-template-areas: "a1 a2";
     grid-gap: 59px;
 
+    @include md-sm {
+      grid-template-columns: 1fr 236px;
+    }
+
     @include sm {
       margin-bottom: 63px;
       justify-items: center;
@@ -39,7 +43,7 @@
     margin-bottom: 50px;
     letter-spacing: 0.1em;
     color: $color-main;
-    border-block: border-box;
+    box-sizing: border-box;
 
     @include lg {
       margin-bottom: 35px;
@@ -61,6 +65,10 @@
     letter-spacing: 0.05em;
     line-height: 1.355em;
     color: $color-gray;
+
+    @include md {
+      font-size: 1rem;
+    }
   }
 
   &__article p:first-of-type::after {
@@ -69,7 +77,7 @@
     top: 0;
     right: -30px;
     height: 200px;
-    border-left: 1px solid rgba($color-gray, 0.5);
+    border-left: 2px solid $c5;
 
     @include sm {
       display: none;
@@ -77,6 +85,12 @@
   }
 
   &__image {
+    display: grid;
+    align-content: center;
     grid-area: a2;
+
+    img {
+      max-width: 100%;
+    }
   }
 }
