--- a/assets/scss/sections/_section-posts.scss
+++ b/assets/scss/sections/_section-posts.scss
@@ -134,6 +134,7 @@
 
     h3 {
       margin: 0 auto;
+      padding-top: 18px;
       font-family: $font-header;
       font-size: 1.125rem;
       letter-spacing: 0.05em;
