--- a/assets/scss/sections/_section-posts.scss
+++ b/assets/scss/sections/_section-posts.scss
@@ -68,7 +68,7 @@
 
     &__button-link {
       min-width: 350px;
-      background-color: $color-gray-dark;
+      background-color: $c1;
       border: 2px solid $color-main;
     }
   }
