--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -101,9 +101,8 @@
 
     &--button {
       padding: 0;
-      border: 3px solid #797F90;
       border-bottom: 3px solid #9B9FAC;
-      background-color: #797F90;
+      background-color: $c4;
     }
 
     &--button:hover,
